--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form id="loginform">
+		<h1>Login Form</h1> <br>
+		<input type="text" id="username" placeholder="Username"> <br>
+		<input type="password" id="password" placeholder="Password"> <br>
+		<label for="checkbox">Remember me</label>
+		<input type="checkbox" id="checkbox" > <br>
+		<input type="submit" id="submit" value="Submit">
+	</form>
+	<button id="existing" style="display:none;" >Login as existing user</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
