--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<form id="loginform">
 		<h1>Login Form</h1> <br>
+		<label for="username">Username</label>
 		<input type="text" id="username" placeholder="Username"> <br>
+		<label for="password">Password</label>
 		<input type="password" id="password" placeholder="Password"> <br>
 		<label for="checkbox">Remember me</label>
 		<input type="checkbox" id="checkbox" > <br>
