--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<input type="text" id="username" placeholder="Username"> <br>
 		<label for="password">Password:</label>
 		<input type="password" id="password" placeholder="Password"> <br>
-		<label for="checkbox">Remember me</label>
+		<label for="checkbox">Remember me:</label>
 		<input type="checkbox" id="checkbox" > <br>
 		<input type="submit" id="submit" value="Submit">
 	</form>
